; ModuleID = '/home/carl/AnghaBench/linux/lib/extr_sbitmap.c_sbitmap_any_bit_clear.c'
source_filename = "/home/carl/AnghaBench/linux/lib/extr_sbitmap.c_sbitmap_any_bit_clear.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sbitmap = type { i32, %struct.sbitmap_word* }
%struct.sbitmap_word = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sbitmap_any_bit_clear(%struct.sbitmap* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.sbitmap*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sbitmap_word*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store %struct.sbitmap* %0, %struct.sbitmap** %3, align 8
  store i32 0, i32* %4, align 4
  br label %8

8:                                                ; preds = %40, %1
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.sbitmap*, %struct.sbitmap** %3, align 8
  %11 = getelementptr inbounds %struct.sbitmap, %struct.sbitmap* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = icmp ult i32 %9, %12
  br i1 %13, label %14, label %43

14:                                               ; preds = %8
  %15 = load %struct.sbitmap*, %struct.sbitmap** %3, align 8
  %16 = getelementptr inbounds %struct.sbitmap, %struct.sbitmap* %15, i32 0, i32 1
  %17 = load %struct.sbitmap_word*, %struct.sbitmap_word** %16, align 8
  %18 = load i32, i32* %4, align 4
  %19 = zext i32 %18 to i64
  %20 = getelementptr inbounds %struct.sbitmap_word, %struct.sbitmap_word* %17, i64 %19
  store %struct.sbitmap_word* %20, %struct.sbitmap_word** %5, align 8
  %21 = load %struct.sbitmap_word*, %struct.sbitmap_word** %5, align 8
  %22 = getelementptr inbounds %struct.sbitmap_word, %struct.sbitmap_word* %21, i32 0, i32 0
  %23 = load i64, i64* %22, align 8
  %24 = load %struct.sbitmap_word*, %struct.sbitmap_word** %5, align 8
  %25 = getelementptr inbounds %struct.sbitmap_word, %struct.sbitmap_word* %24, i32 0, i32 1
  %26 = load i64, i64* %25, align 8
  %27 = xor i64 %26, -1
  %28 = and i64 %23, %27
  store i64 %28, i64* %6, align 8
  %29 = load %struct.sbitmap_word*, %struct.sbitmap_word** %5, align 8
  %30 = getelementptr inbounds %struct.sbitmap_word, %struct.sbitmap_word* %29, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  %32 = call i64 @find_first_zero_bit(i64* %6, i64 %31)
  store i64 %32, i64* %7, align 8
  %33 = load i64, i64* %7, align 8
  %34 = load %struct.sbitmap_word*, %struct.sbitmap_word** %5, align 8
  %35 = getelementptr inbounds %struct.sbitmap_word, %struct.sbitmap_word* %34, i32 0, i32 2
  %36 = load i64, i64* %35, align 8
  %37 = icmp ult i64 %33, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %14
  store i32 1, i32* %2, align 4
  br label %44

39:                                               ; preds = %14
  br label %40

40:                                               ; preds = %39
  %41 = load i32, i32* %4, align 4
  %42 = add i32 %41, 1
  store i32 %42, i32* %4, align 4
  br label %8

43:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %44

44:                                               ; preds = %43, %38
  %45 = load i32, i32* %2, align 4
  ret i32 %45
}

declare dso_local i64 @find_first_zero_bit(i64*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
